<resources>
    <string name="app_name">UtilityApp</string>
    <string name="calendar">Calendar</string>
    <string name="calculator">Calculator</string>
    <string name="converter">Converter</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="developer">Dev</string>
    <string name="events_will_be_displayed_here">Events will be displayed here</string>

    <!-- Calculator buttons -->
    <string name="clear">C</string>
    <string name="left_parenthesis">(</string>
    <string name="right_parenthesis">)</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="decimal">.</string>
    <string name="delete">DEL</string>
    <string name="equals">=</string>

    <!-- Numbers -->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="enter_amount">Enter amount</string>
    <string name="convert">Convert</string>
    <string name="save_settings">Save Settings</string>
    <string name="light_mode">Light Mode</string>
    <string name="this_is_the_help_section_you_can_add_your_help_content_here">This is the help section. You can add
        your help content here.
    </string>
    <string name="developer_image">Developer Image</string>
    <string name="developer_info">Developer Info</string>
    <string name="add_event">Add Event</string>
    <string name="event_title">Event Title</string>
    <string name="event_description">Event Description</string>
    <string name="tawanda_mudonhi">Tawanda Mudonhi</string>
</resources>