<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Calculator">

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:textSize="48sp"
        android:textColor="@color/on_background"
        android:gravity="bottom|end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonGrid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <GridLayout
            android:id="@+id/buttonGrid"
            android:layout_width="353dp"
            android:layout_height="287dp"
            android:columnCount="4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintVertical_bias="0.956"
            tools:layout_editor_absoluteX="29dp"
            tools:ignore="MissingConstraints">

        <Button android:id="@+id/buttonClear" android:text="@string/clear" style="@style/CalculatorButton"
                android:backgroundTint="@color/accent"/>
        <Button android:id="@+id/buttonLeftParen" android:text="@string/left_parenthesis"
                style="@style/CalculatorButton" android:backgroundTint="@color/accent"/>
        <Button android:id="@+id/buttonRightParen" android:text="@string/right_parenthesis"
                style="@style/CalculatorButton" android:backgroundTint="@color/accent"/>
        <Button android:id="@+id/buttonDivide" android:text="@string/divide" style="@style/CalculatorButton"
                android:backgroundTint="@color/primary"/>

        <Button android:id="@+id/button7" android:text="@string/seven" style="@style/CalculatorButton"
                android:backgroundTint="@color/surface"/>
        <Button android:id="@+id/button8" android:text="@string/eight" style="@style/CalculatorButton"
                android:backgroundTint="@color/surface"/>
        <Button android:id="@+id/button9" android:text="@string/nine" style="@style/CalculatorButton"
                android:backgroundTint="@color/surface"/>
        <Button android:id="@+id/buttonMultiply" android:text="@string/multiply" style="@style/CalculatorButton"
                android:backgroundTint="@color/primary"/>

        <Button android:id="@+id/button4" android:text="@string/four" style="@style/CalculatorButton"
                android:backgroundTint="@color/surface"/>
        <Button android:id="@+id/button5" android:text="@string/five" style="@style/CalculatorButton"
                android:backgroundTint="@color/surface"/>
        <Button android:id="@+id/button6" android:text="@string/six" style="@style/CalculatorButton"
                android:backgroundTint="@color/surface"/>
        <Button android:id="@+id/buttonSubtract" android:text="@string/subtract" style="@style/CalculatorButton"
                android:backgroundTint="@color/primary"/>

        <Button android:id="@+id/button1" android:text="@string/one" style="@style/CalculatorButton"
                android:backgroundTint="@color/surface"/>
        <Button android:id="@+id/button2" android:text="@string/two" style="@style/CalculatorButton"
                android:backgroundTint="@color/surface"/>
        <Button android:id="@+id/button3" android:text="@string/three" style="@style/CalculatorButton"
                android:backgroundTint="@color/surface"/>
        <Button android:id="@+id/buttonAdd" android:text="@string/add" style="@style/CalculatorButton"
                android:backgroundTint="@color/primary"/>

        <Button android:id="@+id/buttonDecimal" android:text="@string/decimal" style="@style/CalculatorButton"
                android:backgroundTint="@color/surface"/>
        <Button android:id="@+id/button0" android:text="@string/zero" style="@style/CalculatorButton"
                android:backgroundTint="@color/surface"/>
        <Button android:id="@+id/buttonDelete" android:text="@string/delete" style="@style/CalculatorButton"
                android:backgroundTint="@color/accent"/>
        <Button android:id="@+id/buttonEquals" android:text="@string/equals" style="@style/CalculatorButton"
                android:backgroundTint="@color/primary"/>

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>